fix: fix mapping problem with incorrect import
