# src/identity/src/routes/routes.ts
@@ -302,7 +302,7 @@ export function RegisterRoutes(app: Router) {
             }
         });
         // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-        app.post('/api/v1/identity/refreshToken',
+        app.post('/api/v1/identity/refresh-token',
             ...(fetchMiddlewares<RequestHandler>(RefreshTokenController)),
             ...(fetchMiddlewares<RequestHandler>(RefreshTokenController.prototype.refreshToken)),
 
